# maplestory-cube-automation

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cube_automation.spec  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
app/: paths.py  version.py
app/core/: automation.py  condition.py  matcher.py  mouse.py  ocr.py  ocr_logger.py  ocr_test_worker.py  screen.py
app/cube/: base.py  compare_flow.py  simple_flow.py
app/gui/: condition_editor.py  main_window.py  region_selector.py  roll_log.py  settings_panel.py
app/models/: config.py  potential.py
docs/: architecture.md  gui-layout.md  handover.md  implementation.md  potential-system.md
tests/: test_condition.py  test_config.py
